fix wrap direction add recording timestamp

--- a/src/Components/Navigation.css
+++ b/src/Components/Navigation.css
@@ -10,7 +10,7 @@
 .items {
     display: flex;
     flex-direction: row-reverse;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     justify-content: space-around;
     margin-top: 1rem;
     width: 100%;
