--- a/src/Components/Navigation/Item.css
+++ b/src/Components/Navigation/Item.css
@@ -1,7 +1,15 @@
 .Item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0.5rem;
     padding: 0.5rem;
     border: 2px solid darkgrey;
     border-radius: 0.5rem;
     background-color: rgb(243, 243, 243);
+}
+
+.Item h4 {
+    font-weight: 500;
+    font-size: 1.1em;
 }
